# Lords-Mobile-Bot-SupDams

./: README.md  Test ok  utilitaires
Lords-mobile-bot-sourcce-game/: AddSpeciallyEffect.cs  AffairMission.cs  AgeState.cs  AllianceBattle.cs  AllianceBoardData.cs  AllianceMemberComparer.cs  AllianceRank.cs  AllianceWartHintDataType.cs  AmbushManager.cs  AnimationUnit.cs  ArenaTargetHeroDataType.cs  AssetResult.cs  AudioCloseQueue.cs  BASE_POINT_FLAG.cs  BGMType.cs  BlackMarketExtraTradeData.cs  BoardUnitKingdom.cs  BookMark.cs  BookMarkData.cs  BrokenFO.cs  Buff.cs  BuffInfoItem.cs  BuffItemCom.cs  BuildDataComparer.cs  BuildTypeData.cs  CString.cs  CastleSkin.cs  ChallengeCampaign.cs  Chase.cs  ChatChannel.cs  ClipInfo.cs  CloudMoveMode.cs  CombatHeroExpData.cs  ComboBox.cs  CoordDisplayData.cs  CorpsHeroAttribute.cs  CorpsStage.cs  CorpsStageBattle.cs  Cosmos.cs  Demo.cs  (+293 more)
Lords-mobile-bot_Rust1/: .gitignore  Cargo.toml  README.md
Lords-mobile-bot_Rust1/src/: bot.rs  bot_bootstrapper.rs  connection.rs  main.rs  packet.rs  packet_type.rs  point.rs  util.rs
Lords-mobile-bot_Rust1/src/bots/: apply.rs  autodevelopment.rs  autodevelopment_manual_hands.rs  discord.rs  hands.rs  mod.rs  register.rs
sourcce/: AERunner.cs  AERunnerSetter.cs  AchieveTarget.cs  ActNewsDataType.cs  ActivityGiftManager.cs  ActivityPrizeWorthDataType.cs  ActivityWindow.cs  AffairCardinalTbl.cs  AffairNarrativeTbl.cs  AllianceGroup.cs  AllianceHint.cs  AllianceJoin.cs  AllianceListText.cs  AllianceMemberClientDataType.cs  AnnouncementBtn.cs  AntiAddictive.cs  ArabicFixerTool.cs  ArabicMapping.cs  (+366 more)
(+1001 files in other folders)
