[package]
name = "lm_bot"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dns-lookup = "1.0.6"
des = "0.7.0"
tokio = { version = "1.5.0", features = [ "rt-multi-thread", "macros" ] }
serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
async-trait = "0.1.50"
futures = "0.3.15"
reqwest = { version = "0.11.3", features = [ "json" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64"
strfmt = "0.1.6"
rand = "0.8.3"
rocket = "0.5.0-rc.1"
either = "1.6.1"